--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         nav a{
             text-decoration: none;
-            color: #ffffff;
+            color: black;
             padding: 0 10px;
         }
     </style>
@@ -21,13 +21,14 @@
 </head>
 <body>
     <nav>
-        <a href="">Séries</a>
-        <a href="">Linguagens</a>
-
-        <div class="pagina"></div>
+        <a href wm-link="series.html" wm-destino=".pagina">Séries</a>
+        <a href wm-link="linguagens.html" wm-destino=".pagina">Linguagens</a>
+        <a href wm-link="albuns.html" wm-destino=".pagina">Álbuns</a>
     </nav>
+    <div class="pagina"></div>
+    
 
-    <script>
+    <!-- <script>
         function navegarViaAjax(url, seletor, push = true){
             if(!url || !select) return
             const elemento = document.querySelector(seletor)
@@ -51,10 +52,41 @@
 
             window.onpopstate = e => {
                 if(e.state){
-                    navegarViaAjax(window.location.href), e.state.seletor, false
+                    navegarViaAjax(window.location.href, e.state.seletor, false)
                 }
             }
         })
+    </script> -->
+
+    <script>
+        function navegarViaAjax(url, seletor, push = true) {
+            if(!url || !seletor) return
+            const elemento = document.querySelector(seletor)
+            fetch(url)
+                .then(resp => resp.text())
+                .then(html => {
+                    elemento.innerHTML = html
+                    if(push) {
+                        history.pushState({ seletor }, "Página Ajax", url)
+                    }
+                })
+        }
+
+        document.querySelectorAll('[wm-link]').forEach(link => {
+            const url = link.attributes['wm-link'].value 
+            const seletorDestino = link.attributes['wm-destino'].value
+
+            link.onclick = e => {
+                e.preventDefault()
+                navegarViaAjax(url, seletorDestino)
+            }
+        })
+
+        window.onpopstate = e => {
+            if(e.state){
+                navegarViaAjax(window.location.href, e.state.seletor, false)
+            }
+        }
     </script>
 </body>
 </html>
