Criação da página de álbuns da Taylor Swift

--- a/albuns.html
+++ b/albuns.html
@@ -1,17 +1,68 @@
 <h1>Álbuns</h1>
+<br>
+<p>
+    Taylor Swift é uma cantora estadunidense que começou sua carreira musical aos 16 anos. Atualmente a cantora tem 36 anos e é referência no mundo da música. Sua discografia conta atualmente com 12 álbuns de estúdio apresentados a seguir.
+</p>
+<br>
 <ul>
-    <li>Taylor Swift</li>
-    <li>Fearless</li>
-    <li>Speak Now</li>
-    <li>Red</li>
-    <li>1989</li>
-    <li>Reputation</li>
-    <li>Lover</li>
-    <li>folklore</li>
-    <li>evermore</li>
-    <li>Midnights</li>
-    <li>The Tortured Poets Department</li>
-    <li>The Life Of A Showgirl</li>
+    <li>Taylor Swift <img class="capaAlbum" src="assets/albumTaylorSwift.jpg" alt="Capa álbum Taylor Swift"></li>
+
+    <li>Fearless <img class="capaAlbum" src="assets/albumFearlessTV.jpg" alt="Capa álbum Fearless"></li>
+
+    <li>Speak Now <img class="capaAlbum" src="assets/albumSpeakNowTV.jpg" alt="Capa álbum Speak Now (Taylor's Version)"></li>
+
+    <li>Red <img class="capaAlbum" src="assets/albumRedTV.jpg" alt="Capa álbum Red (Taylor's Version)"></li>
+
+    <li>1989 <img class="capaAlbum" src="assets/album1989TV.jpg" alt="Capa álbum 1989 (Taylor's Version)"></li>
+
+    <li>Reputation <img class="capaAlbum" src="assets/albumReputation.jpg" alt="Capa álbum Reputation"></li>
+
+    <li>Lover <img class="capaAlbum" src="assets/albumLover.jpg" alt="Capa álbum Lover"></li>
+
+    <li>folklore <img class="capaAlbum" src="assets/albumFolklore.jpg" alt="Capa álbum folklore"></li>
+
+    <li>evermore <img class="capaAlbum" src="assets/albumEvermore.jpg" alt="Capa álbum evermore"></li>
+
+    <li>Midnights <img class="capaAlbum" src="assets/albumMidnights.jpg" alt="Capa álbum Midnights"></li>
+
+    <li>The Tortured Poets Department <img class="capaAlbum" src="assets/albumTheTorturedPoetsDepartment.jpg" alt="Capa álbum The Tortured Poets Department"></li>
+
+    <li>The Life Of A Showgirl <img class="capaAlbum" src="assets/albumTheLifeOfAShowgirl.jpg" alt="Capa álbum The Life Of A Showgirl"></li>
 </ul>
 
+
+<style>
+
+    h1{
+        align-content: center;
+    }
+
+    p{
+        text-align: justify;
+        align-content: center;
+    }
+
+    ul{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 50px;
+    }
+
+    li{
+        list-style: none;
+        justify-content: center;
+        text-align: center;
+        font-size: 30px;
+    }
+
+    .capaAlbum{
+        width: 400px; 
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+    }
+
+</style>
 
