--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
     <link rel="stylesheet" href="../style.css">
 
     <style>
+        body{
+            background: linear-gradient(to bottom, #2E2A4A, #C3AED6, #F4C2C2);  
+            height: 100vh;
+        }
+
         nav{
             font-size: 2em;
         }
 
         nav a{
             text-decoration: none;
-            color: black;
+            color: white;
             padding: 0 10px;
         }
     </style>
@@ -21,9 +26,8 @@
 </head>
 <body>
     <nav>
-        <a href wm-link="series.html" wm-destino=".pagina">Séries</a>
-        <a href wm-link="linguagens.html" wm-destino=".pagina">Linguagens</a>
         <a href wm-link="albuns.html" wm-destino=".pagina">Álbuns</a>
+        <a href wm-link="1989.html" wm-destino=".pagina">1989</a>
     </nav>
     <div class="pagina"></div>
     
