--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         body{
             background: linear-gradient(to bottom, #2E2A4A, #C3AED6, #F4C2C2);  
-            height: 100vh;
+            height: 100%;
         }
 
         nav{
