alterando estrutura página Track 5

--- a/albuns.html
+++ b/albuns.html
@@ -139,7 +139,11 @@
 
     .evermore{font-family: 'Cormorant Garamond';}
 
+    .Midnights{font-family: ;}
+
     .ttpd{ font-family: 'Cinzel';}
+
+    .tloas{font-family: ;}
 
 </style>
 
