--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <nav>
         <a href wm-link="albuns.html" wm-destino=".pagina">Álbuns</a>
-        <a href wm-link="1989.html" wm-destino=".pagina">1989</a>
+        <a href wm-link="track5.html" wm-destino=".pagina">Track 5</a>
     </nav>
     <div class="pagina"></div>
     
