Terminando página Track 5

--- a/albuns.html
+++ b/albuns.html
@@ -31,7 +31,7 @@
 
     <li class="ttpd">The Tortured Poets Department <img class="capaAlbum" src="assets/albumTheTorturedPoetsDepartment.jpg" alt="Capa álbum The Tortured Poets Department"></li>
 
-    <li class="tloas">The Life Of A Showgirl <img class="capaAlbum" src="assets/albumTheLifeOfAShowgirl.jpg" alt="Capa álbum The Life Of A Showgirl"></li>
+    <li class="tloas">THE LIFE OF A SHOWGIRL <img class="capaAlbum" src="assets/albumTheLifeOfAShowgirl.jpg" alt="Capa álbum The Life Of A Showgirl"></li>
 </ul>
 
 
@@ -78,6 +78,7 @@
     /* CSS */
     body{
         background: linear-gradient(to bottom, #F4C2C2, #C3AED6 ,#2E2A4A);
+        background-repeat: no-repeat;
         color: white;
         justify-content: center;
         align-items: center;
@@ -135,15 +136,15 @@
 
     .Lover{font-family: 'Dancing Script';}
 
-    .folklore{font-family: 'Crimson Text';}
+    .folklore{font-family: 'Cormorant Garamond';}
 
     .evermore{font-family: 'Cormorant Garamond';}
 
-    .Midnights{font-family: ;}
+    .Midnights{font-family: 'Roboto';}
 
     .ttpd{ font-family: 'Cinzel';}
 
-    .tloas{font-family: ;}
+    .tloas{font-family: 'Roboto';}
 
 </style>
 
