--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
     <style>
         body{
-            background: linear-gradient(to bottom, #2E2A4A, #C3AED6, #F4C2C2);  
-            height: 100%;
+            background: linear-gradient(to bottom, #2E2A4A, #C3AED6, #F4C2C2);
+            background-repeat: no-repeat;  
+            height: 100vh;
+            color: white;
         }
 
         nav{
